# ImMesh

./: .gitignore  CMakeLists.txt  README.md
include/: FileMeshParser.h
src/: FileMeshParser.cpp  main.cpp
